--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a54566ea",
+   "id": "85124f9a",
    "metadata": {},
    "source": [
     "### Hypothesis Testing: Question Two\n",
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "00d4cb21",
+   "id": "e22e331b",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7228234f",
+   "id": "a83d83a5",
    "metadata": {},
    "source": [
     "Don't see a specific county being responsible more than another.\n",
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a1a3fcf4",
+   "id": "707140ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4f6980f",
+   "id": "e3d59c8d",
    "metadata": {},
    "source": [
     "### Hypothesis Testing: Question Three\n",
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "78be9038",
+   "id": "92270779",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51c5d326",
+   "id": "90b7599c",
    "metadata": {},
    "source": [
     "H_0: There is no relationship between logerror and bedroom count\n",
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "53398684",
+   "id": "d8e415bc",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "46627baf",
+   "id": "d00d8203",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6a9dba07",
+   "id": "5a1fd15e",
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "bf7af33f",
+   "id": "30242d27",
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1163,8 @@
     "\n",
     "### Recommendations: \n",
     "- I would recommend to continue improving upon the baseline model as it works well enough given the current situation.\n",
-    "- I would recommend pursuing further identifications of key drivers for logerror to potentially construct better accurate predictors.\n"
+    "- I would recommend pursuing further identifications of key drivers for logerror to potentially construct better accurate predictors.\n",
+    "- Consider creating models for each cluster, this may help narrow down other variables.\n"
    ]
   },
   {
@@ -1208,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1844548c",
+   "id": "ebb22ead",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1216,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb6135b1",
+   "id": "86c706b1",
    "metadata": {},
    "outputs": [],
    "source": []
