--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "cb0c5077",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85124f9a",
+   "id": "44510525",
    "metadata": {},
    "source": [
     "### Hypothesis Testing: Question Two\n",
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e22e331b",
+   "id": "c84f3e77",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a83d83a5",
+   "id": "e7cdb3d6",
    "metadata": {},
    "source": [
     "Don't see a specific county being responsible more than another.\n",
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "707140ae",
+   "id": "21c8f6d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3d59c8d",
+   "id": "486b65e5",
    "metadata": {},
    "source": [
     "### Hypothesis Testing: Question Three\n",
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "92270779",
+   "id": "519e0b67",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90b7599c",
+   "id": "b064d14b",
    "metadata": {},
    "source": [
     "H_0: There is no relationship between logerror and bedroom count\n",
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d8e415bc",
+   "id": "3ce2e369",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d00d8203",
+   "id": "539c68fa",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5a1fd15e",
+   "id": "5eaa88ff",
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "30242d27",
+   "id": "c2a3c607",
    "metadata": {},
    "outputs": [
     {
@@ -1169,6 +1169,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "93cb93b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "92066"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_validate.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6f3bd9f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21246"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_validate.size"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "id": "e40c920f",
    "metadata": {},
@@ -1209,7 +1251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebb22ead",
+   "id": "db90c476",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1217,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86c706b1",
+   "id": "574d09ac",
    "metadata": {},
    "outputs": [],
    "source": []
